--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-md-4 animate-box">
 						<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
 					</div>
@@ -246,13 +246,13 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<footer>
 			<div id="footer">
 				<div class="container">
-					<!-- <div class="row"> -->
-						<div class="col-md-4 col-pb-sm">
+					<div class="row">
+						<!-- <div class="col-md-4 col-pb-sm">
 							<div class="row">
 								<div class="col-md-10">
 									<h2>Let's Talk</h2>
@@ -301,7 +301,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
@@ -314,7 +314,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</div>
 		</footer>
-
 	</div>
 
 	<!-- jQuery -->
