--- a/index.html
+++ b/index.html
@@ -248,6 +248,23 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
+							<a href="voice-anonym.html" class="work-img" style="background-image: url(images/voiceAnonym.jpg);">
+								<div class="display-t">
+									<div class="work-name">
+										<h2>Voice anonymization in urban sound recordings</h2>
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p> In this paper, we propose an anomization method that obfsucate the content and msask the speaker identity, while preserving the acoustic scene. s</p>
+									<p class="read"><a href="voice-anonym.html">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
 							<a href="source-sep.html" class="work-img" style="background-image: url(images/work-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
