--- a/cv.html
+++ b/cv.html
@@ -133,7 +133,8 @@
 										<div class="services animate-box">
 											<h3>1 - Work Experiences</h3>
 											<ul>
-												<li>PhD @IRCAm - Music Description Estimation with Deep Learning. Supervised by Geoffroy Peeters.<a href="https://medias.ircam.fr/x96587b">Defense presentation</a></li>
+												<li>PhD @IRCAm - Music Description Estimation with Deep Learning. Supervised by Geoffroy Peeters.<a href="https://medias.ircam.fr/x96587b">Defense presentation</a>
+												<a href="defenseSlide.pdf">Defense slides</a></li>
 												<li>Visiting Scholar @NYU - Voice anonymization in urban sounds. Supervised by Mark Cartwright, Brian McFee and Juan Bello.</li>
 												<li>Internship @LIP6 - Generic programming for combinatorial classes in Ocaml. Supervised by Matthieu Dien.</li>
 
