--- a/dali2.html
+++ b/dali2.html
@@ -20,7 +20,6 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
@@ -112,108 +111,43 @@
 		<div id="colorlib-work">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Papers</h2>
+					<h2 class="bold">Paper</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Overview</span>
-						<h2>Academic publications</h2>
+						<span>ISMIR 2018</span>
+						<h2>The Dali Dataset</h2>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="rotate">
-							<h2 class="heading">Papers</h2>
+							<h2 class="heading">ISMIR 2018</h2>
 						</div>
 					</div>
 				</div>
-
-								<div class="row">
-									<div class="col-md-12">
-										<div class="work-entry animate-box">
-											<a href="voice-anonym.html" class="work-img" style="background-image: url(images/voiceAnonym.jpg);">
-												<div class="display-t">
-													<div class="work-name">
-														<h2>Voice anonymization in urban sound recordings</h2>
-													</div>
-												</div>
-											</a>
-											<div class="col-md-4 col-md-offset-4">
-												<div class="desc">
-													<p> In this paper, we propose an anomization method that obfsucate the content and msask the speaker identity, while preserving the acoustic scene. s</p>
-													<p class="read"><a href="voice-anonym.html">View details</a></p>
-												</div>
-											</div>
-										</div>
-									</div>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="source-sep.html" class="work-img" style="background-image: url(images/work-1.jpg);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>Source separation & Data augmentation</h2>
-									</div>
-								</div>
-							</a>
-							<div class="col-md-4 col-md-offset-4">
+							<!-- <a href="papers.html" class="work-img" style="background-image: url(images/work-2.jpg);">
+							</a> -->
+							<img class="img-responsive" src="images/work-11.png" alt="html5 bootstrap template by colorlib.com" />
+								<footer><small> &#9400; Gabriel Meseguer Brocal </small></footer>
+							<br>
+							<div class="col-md-8 col-md-offset-2">
 								<div class="desc">
-									<p> In this paper, we present our data augmentation algorithm, tailored for singing voice extraction</p>
-									<p class="read"><a href="source-sep.html">View Details</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="struct-estim.html" class="work-img" style="background-image: url(images/work-2.jpg);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>Structure estimation</h2>
-									</div>
-								</div>
-							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>We investigated different input representation to detect music structure boundaries.</p>
-									<p class="read"><a href="struct-estim.html">View Details</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="dali.html" class="work-img" style="background-image: url(images/work-3.png);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>DALI dataset</h2>
-									</div>
-								</div>
-
-							</a>
-							<footer><small> &#9400; Gabriel Meseguer Brocal </small></footer>
-
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>We constructed the largest dataset of audio and lyrics aligned, using singing voice detection with deep learning.</p>
-									<p class="read"><a href="dali.html">View details</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="dali.html" class="work-img" style="background-image: url(images/work-3.png);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>DALI dataset - Second paper</h2>
-									</div>
-								</div>
-							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p> Second paper on the DALI dataset, presenting 2nd version. An human evaluation of the produced alignment is also presented. </p>
-									<p class="read"><a href="dali2.html">View details</a></p>
+									<h2>Abstract</h2>
+                                    The DALI dataset is a large dataset of time-aligned symbolic vocal melody notations (notes) and lyrics at four levels of granularity. 
+                                    DALI contains 5358 songs in its first version and 7756 for the second one. In this article, we present the dataset, explain the developed tools to work the data and detail the approach used to build it. 
+                                    Our method is motivated by active learning and the teacher-student paradigm. We establish a loop whereby dataset creation and model learning interact, benefiting each other. 
+                                    We progressively improve our model using the collected data. At the same time, we correct and enhance the collected data every time we update the model. 
+                                    This process creates an improved DALI dataset after each iteration. Finally, we outline the errors still present in the dataset and propose solutions to global issues. 
+                                    We believe that DALI can encourage other researchers to explore the interaction between model learning and dataset creation, rather than regarding them as independent tasks.
+									<img class="img-responsive" src="images/work-12.png" alt="html5 bootstrap template by colorlib.com" /><br>
+									<p> This work has been realised in colaboration with Gabriel Meseguer Brocal. </p>
+									<p class="read"><a href="https://transactions.ismir.net/">Published in Transaction of ISMIR (TISMIR) </p>
+										<p class="read"><a href="https://github.com/gabolsgabs/DALI">Downlad the dataset and API </p>
+									<p class="read"><a href="https://transactions.ismir.net/articles/10.5334/tismir.30/"> Paper link</a></p>
 								</div>
 							</div>
 						</div>
@@ -222,73 +156,72 @@
 			</div>
 		</div>
 
-		<div id="footer">
-			<div class="container">
-				<div class="row">
-					<!-- <div class="col-md-4 col-pb-sm">
-						<div class="row">
-							<div class="col-md-10">
-								<h2>Let's Talk</h2>
-								<p>A small river named Duden flows by their place and supplies.</p>
-								<p><a href="#">noah@info.com</a></p>
-								<p class="colorlib-social-icons">
-									<a href="#"><i class="icon-facebook4"></i></a>
-									<a href="#"><i class="icon-twitter3"></i></a>
-									<a href="#"><i class="icon-googleplus"></i></a>
-									<a href="#"><i class="icon-dribbble2"></i></a>
-								</p>
+		<footer>
+			<div id="footer">
+				<!-- <div class="container">
+					<div class="row">
+						<div class="col-md-4 col-pb-sm">
+							<div class="row">
+								<div class="col-md-10">
+									<h2>Let's Talk</h2>
+									<p>A small river named Duden flows by their place and supplies.</p>
+									<p><a href="#">noah@info.com</a></p>
+									<p class="colorlib-social-icons">
+										<a href="#"><i class="icon-facebook4"></i></a>
+										<a href="#"><i class="icon-twitter3"></i></a>
+										<a href="#"><i class="icon-googleplus"></i></a>
+										<a href="#"><i class="icon-dribbble2"></i></a>
+									</p>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col-md-4 col-pb-sm">
-						<h2>Latest Blog</h2>
-						<div class="f-entry">
-							<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
-							<div class="desc">
-								<span>February 15, 2018</span>
-								<h3><a href="#">Art Gallery in Japan</a></h3>
+						<div class="col-md-4 col-pb-sm">
+							<h2>Latest Blog</h2>
+							<div class="f-entry">
+								<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
+								<div class="desc">
+									<span>February 15, 2018</span>
+									<h3><a href="#">Art Gallery in Japan</a></h3>
+								</div>
+							</div>
+							<div class="f-entry">
+								<a href="#" class="featured-img" style="background-image: url(images/img-2.jpg);"></a>
+								<div class="desc">
+									<span>February 9, 2018</span>
+									<h3><a href="#">A Japanese Constellation</a></h3>
+								</div>
+							</div>
+							<div class="f-entry">
+								<a href="#" class="featured-img" style="background-image: url(images/img-3.jpg);"></a>
+								<div class="desc">
+									<span>February 15, 2018</span>
+									<h3><a href="#">Road Trip</a></h3>
+								</div>
 							</div>
 						</div>
-						<div class="f-entry">
-							<a href="#" class="featured-img" style="background-image: url(images/img-2.jpg);"></a>
-							<div class="desc">
-								<span>February 9, 2018</span>
-								<h3><a href="#">A Japanese Constellation</a></h3>
+						<div class="col-md-4 col-pb-sm">
+							<h2>Newsletter</h2>
+							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
+							<div class="subscribe text-center">
+								<div class="form-group">
+									<input type="text" class="form-control text-center" placeholder="Enter Email address">
+									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
+								</div>
 							</div>
 						</div>
-						<div class="f-entry">
-							<a href="#" class="featured-img" style="background-image: url(images/img-3.jpg);"></a>
-							<div class="desc">
-								<span>February 15, 2018</span>
-								<h3><a href="#">Road Trip</a></h3>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-pb-sm">
-						<h2>Newsletter</h2>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
-						<div class="subscribe text-center">
-							<div class="form-group">
-								<input type="text" class="form-control text-center" placeholder="Enter Email address">
-								<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
-							</div>
-						</div>
-					</div>
-				</div> -->
-				<div class="row">
-					<div class="col-md-12 text-center">
-						<p>
-							&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+					</div> -->
+					<div class="row">
+						<div class="col-md-12 text-center">
+							<p>
+								&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						</p>
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
-
-
+		</footer>
 
 	</div>
 
