--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Fontan and Maxime Le Coz (Archean LABS, Montauban, France). </li>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p> In this paper, we propose an anomization method that obfsucate the content and msask the speaker identity, while preserving the acoustic scene. s</p>
+									<p> In this paper, we propose an anomization method that obfsucate the content and msask the speaker identity, while preserving the acoustic scene.</p>
 									<p class="read"><a href="voice-anonym.html">View details</a></p>
 								</div>
 							</div>
@@ -306,7 +306,7 @@ Fontan and Maxime Le Coz (Archean LABS, Montauban, France). </li>
 							<a href="dali.html" class="work-img" style="background-image: url(images/work-3.png);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>DALI dataset</h2>
+										<h2>DALI dataset - First paper</h2>
 									</div>
 								</div>
 							</a>
@@ -314,6 +314,23 @@ Fontan and Maxime Le Coz (Archean LABS, Montauban, France). </li>
 								<div class="desc">
 									<p>We constructed the largest dataset of audio and lyrics aligned, using singing voice detection with deep learning.</p>
 									<p class="read"><a href="dali.html">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
+							<a href="dali.html" class="work-img" style="background-image: url(images/work-3.png);">
+								<div class="display-t">
+									<div class="work-name">
+										<h2>DALI dataset - Second paper</h2>
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p> Second paper on the DALI dataset, presenting 2nd version. An human evaluation of the produced alignment is also presented. </p>
+									<p class="read"><a href="dali2.html">View details</a></p>
 								</div>
 							</div>
 						</div>
