--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ Fontan and Maxime Le Coz (Archean LABS, Montauban, France). </li>
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="dali.html" class="work-img" style="background-image: url(images/work-3.png);">
+							<a href="dali2.html" class="work-img" style="background-image: url(images/work-3.png);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>DALI dataset - Second paper</h2>
