--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="cv.html">Curriculum Vitae</a></li>
 							<li><a href="papers.html">Papers</a></li>
+							<li><a href="teaching.html">Teaching</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
